# morgenkreis

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  run_check_all.sh  run_linting.sh  run_mypy.sh  run_pytest.sh  run_pytype.sh  run_robot.sh  setenv.sh  update_docker.sh
.github/: FUNDING.yml
.github/workflows/: pipeline.yml
docker/: Dockerfile
rfw/libs/: helloWorld.py
rfw/resources/: helloWorld.resource
rfw/suites/: helloWorld.robot  helloWorldPython.robot
src/: hello.py
test/: test_hello.py
